# auavc

./: README.md
tello_imu_control/: package.xml  setup.cfg  setup.py
tello_imu_control/config/: read_imu_config.yaml
tello_imu_control/launch/: read_imu_launch.py
tello_imu_control/tello_imu_control/: read_imu.py
tello_interaction/: package.xml  setup.cfg  setup.py
tello_interaction/tello_interaction/: interaction.py
