<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello_imu_control</name>
  <version>0.0.1</version>
  <description>Simple package to show how node parameters and launch files work</description>
  <maintainer email="julen.cayero@upc.edu">julian.cayero</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>tello_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
